# QSL

./: .gitignore  .travis-keys.tar.xz.enc  .travis.yml  CMakeLists.txt  Contribution.md  Makefile  QSLConfig.cmake.in  QSLMacros.cmake.in  QSLVersion.cmake.in  README.md  TODO.md  build.sh  qsl_global.h.in  qt_QSL.pri.in  qt_SPIS.pri.in  spis_global.h.in
cmake/: SPISConfig.cmake.in  SPISMacros.cmake.in  SPISVersion.cmake.in
core/: CMakeLists.txt  QSLCoreConfig.cmake.in  pk.h  pk_p.h  qslcolumn.h  qsldb.cpp  qsldb.h  qslfilter.cpp  qslfilter.h  qslfilter_p.h  qslnamespace.h  qslpassword.h  qslquery.cpp  qslquery.h  qsltable.cpp  qsltable.h  qslvariant.h  spiscolumn.h  spisdb.cpp  spisdb.h  spisfilter.cpp  spisfilter.h  spisfilter_p.h  spisnamespace.h  spispassword.cpp  spispassword.h  spisquery.h  spistable.h  spisvariant.cpp  spisvariant.h
core/driver/: CMakeLists.txt  db.cpp  db.h  diff.cpp  diff.h  driver.cpp  driver.h
core/driver/mysql/: CMakeLists.txt  mysql.cpp  mysqldb.cpp  mysqldb.h  mysqldriver.cpp  mysqldriver.h  mysqltypes.cpp  mysqltypes.h
core/driver/sqlite/: CMakeLists.txt  sqlite.cpp  sqlitedb.cpp  sqlitedb.h  sqlitedriver.cpp  sqlitedriver.h  sqlitetypes.cpp  sqlitetypes.h
core/drivers/: PostgreSQL.json  SQLite.json  drivers.qrc
core/include/: qslcolumn.h  qsldb.h  qslfilter.h  qslnamespace.h  qslquery.h  qsltable.h  qslvariant.h
core/src/: qslcolumn.cpp  qsldb.cpp  qslfilter.cpp  qslpassword.cpp  qslquery.cpp  qsltable.cpp  qslvariant.cpp
debian/: changelog  control  copyright  libqslparser.install  libspis-dev.install  libspis.install  libspisparser.install  qsl-doc.install  qsl-drivers.install  rules  spis-doc.dirs  spis-doc.install  spis-drivers.install
doc/: CMakeLists.txt  Doxyfile.in
docker/: build.sh
docker/ubuntu/: Dockerfile
examples/: exampleglobal.h
examples/authenticator/: CMakeLists.txt  auth.qsl  auth.spis  main.cpp
examples/employee/: CMakeLists.txt  employee.spis  main.cpp
examples/simple/: CMakeLists.txt  example.qsl  example.spis  main.cpp  simple.pro
highlight/: CMakeLists.txt  spis.xml
parser/: CMakeLists.txt  database.cpp  database.h  parser.cpp  parser.h  table.cpp  table.h
parser/include/: database.h  parser.h  table.h
parser/src/: parser.cpp  table.cpp
qslc/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
qslc/include/: generator.h
qslc/src/: generator.cpp  main.cpp
qsldump/: CMakeLists.txt  main.cpp
spisc/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
spisdump/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/qslc/: CMakeLists.txt  complete.qsl  main.cpp
tests/qsldump/: CMakeLists.txt  main.cpp
tests/spisc/: CMakeLists.txt  complete.spis  main.cpp
tests/spisdump/: CMakeLists.txt  main.cpp
